[package]
name = "lumos-parse-token"
version = "0.0.1"
description = "Lumos Parse Token"
authors = ["Gao Kanxu <gaokanxu@gmail.com>"]
repository = "https://github.com/gaokanxu/lumos-parse-token"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.8"
borsh = { version = "1.5.1", features = ["unstable__schema"] }
num-derive = "0.4"
num-traits = { version = "0.2", features = ["i128"] }
num_enum = "0.7.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.103"
thiserror = "1.0.57"
bincode = "1.3.3"
assert_matches = "1.5.0"
proptest = "1.4"
test-case = "3.3.1"

lpl-token-2022 = { path = "../lumos-program-library/token/program-2022" }

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
